apps/configs/uptime-kuma/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.local.ruizops.com`)
      kind: Rule
      priority: 100
      services:
        - name: uptime-kuma
          namespace: uptime-kuma
          port: 3001
  tls:
    secretName: uptime-kuma-tls
